<resources>
    <string name="app_name">App Refferal Program</string>

    <string name="ak_login_protocol_scheme">ak964234977027033</string>
    <string name="facebook_app_id">964234977027033</string>
    <string name="client_token">799de49b357b77afede08488ced2f721</string>
    <!--<string name="facebook_app_id">411250219226485</string>-->
    <!--<string name="ak_login_protocol_scheme">ak411250219226485</string>
    <string name="client_token">afcc20af339c90850e4944c873e17757</string>-->
    <string name="permissions_get_accounts_message">
        Grant permission to read your email address from your device to pre-fill.
    </string>
    <string name="permissions_get_accounts_title">Read Email Address</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>
    <string name="log_in_email_button">Log In via Email</string>
    <string name="log_in_phone_button">Log In via Phone</string>
    <string name="log_out_button">Log Out</string>
    <string name="error_label">Error</string>
    <string name="loading_placeholder">Loading&#8230;</string>
    <string name="user_id_label">Account ID</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="na">NA</string>
</resources>
