<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.dharmraj.com.apprefferalprogram.fbAccountKit.ErrorActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/log_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/log_out_button"
            />
        <TextView
            android:id="@+id/error_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
    </LinearLayout>

</ScrollView>
